--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <version>6.2.4</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <!--<dependencyManagement>
